--- a/src/components/navigation/navigation.module.css
+++ b/src/components/navigation/navigation.module.css
@@ -1,74 +1,46 @@
-
-
-.nav-links {
-    display: flex;
-    justify-content: center;
-    /* Centrē navigācijas saišu elementus */
-    gap: 15px;
-    flex-grow: 1;
-    /* Ļauj navigācijas saišu blokam izstiepties */
-}
-
-
-.nav-link {
-    color: white;
-    text-decoration: none;
-    padding: 5px 10px;
-    border-radius: 5px;
-    transition: background-color 0.3s;
-}
-
-
-.dropdown {
-    position: absolute;
-    right: 3%;
-    margin-top: 5px;
-    display: inline-block;
-    border: 1px solid white;
-}
-
-
-
 .navigation-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #e01616;
+    background-color: #000000df;
     padding: 10px 20px;
+    border: 1px solid rgb(19, 30, 88);
     color: white;
+    height: 100px;
 }
 
 .nav-links {
     display: flex;
     justify-content: center;
-    /* Centrē navigācijas saišu elementus */
     gap: 15px;
     flex-grow: 1;
-    /* Ļauj navigācijas saišu blokam izstiepties */
 }
 
-
 .nav-link {
-    color: white;
+    color: rgb(0, 0, 0);
+    font-family: Poppins;
+    font-weight: 600;
     text-decoration: none;
     padding: 5px 10px;
-    border-radius: 5px;
+    border: 1px solid rgb(19, 30, 88);
+    border-radius: 2px;
     transition: background-color 0.3s;
 }
 
+.nav-link:hover {
+    background-color: rgb(7, 81, 131);
+}
 
 .dropdown {
     position: absolute;
-    right: 1%;
-    top: 1%;
+    top: 10px;
+    left: 97%;
     display: inline-block;
-    background-color: #555;
-
 
 }
 
 .dropdown:hover {
-    background-color: rgb(88, 114, 112);
+    background-color: rgb(16, 204, 204);
 }
 
 .dropdown-content {
@@ -97,9 +69,6 @@
     background-color: #555;
 }
 
-.dropdown:hover .dropdown-content {
-    display: block;
-}
 
 .dropdown-content a {
     color: white;
@@ -108,10 +77,8 @@
     display: block;
 }
 
-.dropdown-content a:hover {
-    background-color: #555;
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
+.content-container {
+    text-align: center;
+    padding: 400px;
+    background: rgb(205, 166, 166);
 }
