--- a/src/components/home/home.module.css
+++ b/src/components/home/home.module.css
@@ -84,11 +84,32 @@ width: 300px;
   position: absolute;
   width: 400px;
   right: 20%;
-  top: 25%;
+  top: 23%;
   transition: 0.3s ease;
 }
 
 .vram:hover {
   transform: scale(1.2);
   filter: drop-shadow(0 0 12px rgb(250, 250, 255));
+}
+
+@media (max-width: 1920px) {
+  .vram {
+    position: absolute;
+    top: 34%;
+    right: 15%;
+    width: 350px;
+  }
+
+  .vram:hover {
+    transform: scale(1.1);
+    filter: drop-shadow(0 0 12px rgb(250, 250, 255));
+  }
+
+  .discount_icon {
+    position: absolute;
+    top: 10%;
+    right: 4%;
+    width: 200px;
+    }
 }
