--- a/src/components/home/home.module.css
+++ b/src/components/home/home.module.css
@@ -1,3 +1,9 @@
+:root {
+--card_main_color:  rgba(17, 29, 61, 0.788);
+--text_padding: 3px;
+}
+
+
 body {
   position: fixed; /* Saglabā body pozicionēšanu kā fixed */
   width: 69%;
@@ -92,6 +98,151 @@ width: 300px;
   transform: scale(1.2);
   filter: drop-shadow(0 0 12px rgb(250, 250, 255));
 }
+
+.card_container {
+  position: absolute;
+  top: 70%;
+  right: 5%;
+  display: grid;
+  grid-template-columns: 350px 350px 350px; /* Trīs vienādas kolonnas */
+  grid-template-rows: 350px 350px; /* Divas vienādas rindas */
+  gap: 20px;
+}
+
+.card_one {
+  grid-column: 1 / 2; /* Pirmā kolonna */
+  grid-row: 1 / 2; /* Pirmā rinda */
+  background-color: var(--card_main_color);
+  background-size: cover;
+  border-radius: 20px 0 0 0 ;
+  border: 1px solid #ddd;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.card_one h3 {
+position: absolute;
+top: 3%;
+color: rgb(184, 255, 118);
+background-color: rgba(10, 54, 75, 0.61);
+padding: var(--text_padding);
+border-radius: 12px;
+}
+
+.tablets {
+  width: 440px;
+}
+
+.card_two {
+  grid-column: 1 / 2; /* Pirmā kolonna */
+  grid-row: 2 / 3; /* Otrā rinda */
+  background-color: var(--card_main_color);
+  background-size: cover;
+  border-radius:  0 0 0 20px ;
+  border: 1px solid #ddd;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.laptop {
+  width: 280px;
+}
+
+.card_three {
+  grid-column: 2 / 3; /* Otrā kolonna */
+  grid-row: 1 / 3; /* Abas rindas (horizontāli izstiepta karte) */
+  background-color: var(--card_main_color);
+  background-size: cover;
+  border: 1px solid #ddd;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.card_four {
+  grid-column: 3 / 4; /* Trešā kolonna */
+  grid-row: 1 / 2; /* Pirmā rinda */
+  background-color: var(--card_main_color);
+  background-size: cover;
+  border: 1px solid #ddd;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.pc {
+  width: 380px;
+}
+
+.card_five {
+  grid-column: 3 / 4; /* Trešā kolonna */
+  grid-row: 2 / 3; /* Otrā rinda */
+  background-color: var(--card_main_color);
+  background-size: cover;
+  border: 1px solid #ddd;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.card_six {
+  grid-column: 4 / 4; /* Aizņem visu platumu (visas trīs kolonnas) */
+  grid-row: 1 / 5; /* Ceturta rinda */
+  background-color: var(--card_main_color);
+  background-size: cover;
+  border-radius: 0 20px 20px 0 ;
+  border: 1px solid #ddd;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 720px; /* Pielāgo augstumu, kā vēlies */
+  width: 500px;
+ 
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 @media (max-width: 1920px) {
   .vram {
