--- a/src/pages/login/login.module.css
+++ b/src/pages/login/login.module.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Libre+Bodoni:ital,wght@0,400..700;1,400..700&family=Lobster&family=Zeyada&display=swap');
 
 .main {
+    position: absolute;
+    top: 25px;
     width: 100%;
     height: 100vh;
     display: flex;
@@ -13,8 +15,8 @@
 
 .login_container {
     position: absolute;
-    right: 775px;
-    width: 20%;
+    right: 745px;
+    width: 24%;
     height: 30%;
     border-radius: 10px;
     padding: 25px;
@@ -173,9 +175,11 @@
     background: none;
 }
 
-/* Piemērs: piemēro stilu ekrāniem, kuru platums ir 1920px un mazāk */
-@media only screen and (min-width: 1024px) and (max-width: 1920px) {
+
+@media only screen and (min-width: 1920px) and (max-width: 1920px) {
     .main {
+        position: absolute;
+        top: 45px;
         width: 100%;
         height: 100vh;
         display: flex;
@@ -187,11 +191,10 @@
     }
 
     .login_container {
-        position: absolute;
-        left: 50%; /* Pozicionēšanu uz centru horizontāli */
+   margin-right: -297px;
         top: 50%; /* Pozicionēšanu uz centru vertikāli */
         transform: translate(-50%, -50%); /* Uzlabo centru uz ekrānu */
-        width: 25%;
+        width: 22%;
         height: 35%;
         border-radius: 10px;
         padding: 30px;
@@ -216,156 +219,5 @@
 
     .password_box {
         padding: 8px;
-    }
-}
-
-
-
-/* ============== Tablets and Desktop ============= */
-@media only screen and (max-width: 412px) and (max-height: 914px) {
- .main {
-        width: 100%;
-        height: 100vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background: url('../../img/holding_phone.jpg');
-        background-size: cover;
-        background-position: center; /* Izmanto centru, lai uzlabotu izskatu */
-    }
-
-    .login_container {
-        width: 90%;
-        max-width: 360px; /* Ieteicams minimālais platums */
-        height: auto;
-        border-radius: 10px;
-        padding: 20px;
-        background-color: rgba(255, 255, 255, 0.9); /* Pievieno fona krāsu */
-    }
-
-    .logo_box {
-        width: 80px;
-        margin: 0 auto; /* Centra logotipu */
-        display: block;
-    }
-
-    .form_title {
-        font-size: 1.2rem;
-        font-family: "Libre Bodoni", serif;
-        text-align: center;
-        color: rgb(52, 255, 26);
-        margin-bottom: 20px; /* Lai nodrošinātu, ka ir pietiekami daudz vietas */
-    }
-
-    .login_form {
-        display: flex;
-        flex-direction: column;
-        font-weight: bold;
-        color: #000000;
-        font-size: 0.9rem;
-    }
-
-    .div_wrapper {
-        margin: 8px 0;
-    }
-
-    .message {
-        padding: 10px;
-        text-align: center;
-        border-radius: 2px;
-        color: #ffffff;
-        background-color: #c20202;
-        margin-bottom: 10px;
-    }
-
-    .form_input_box {
-        width: 100%;
-    }
-
-    .input_box {
-        padding: 8px;
-        outline: none;
-        border-radius: 5px;
-        margin: 4px 0;
-        background-color: rgba(255, 255, 255, 0.8);
-        border: 1px solid #000000;
-    }
-
-    .input_box:focus {
-        border: 2px solid #5fba5f;
-    }
-
-    .invalid_user {
-        color: rgb(170, 28, 28);
-    }
-
-    .login_button {
-        width: 100%;
-        background-color: #217f21;
-        color: white;
-        border-radius: 5px;
-        padding: 10px;
-        margin-top: 12px;
-        text-align: center;
-        font-size: 0.9rem;
-        cursor: pointer;
-    }
-
-    .login_button:hover {
-        background-color: #1f5d1f;
-    }
-
-    .login {
-        width: 100%;
-        margin-top: 10px;
-        text-align: center;
-        font-size: 0.8rem;
-    }
-
-    .forgot_password_box {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .remember_me {
-        margin-bottom: 10px;
-        display: flex;
-        align-items: center;
-        color: #f1fffe;
-    }
-
-    .remember_me_text {
-        margin-left: 6px;
-    }
-
-    .forgot_password_text {
-        color: #000000;
-        font-size: 0.8rem;
-    }
-
-    .password_box {
-        display: flex;
-        justify-content: space-between;
-        width: 100%;
-        padding: 8px;
-        outline: none;
-        border-radius: 5px;
-        margin: 4px 0;
-        background-color: white;
-        border: 1px solid #000000;
-    }
-
-    .password_input_box {
-        width: 85%;
-        background-color: transparent;
-        outline: none;
-        border: none;
-    }
-
-    .eye_botton {
-        color: #919591;
-        border: none;
-        background: none;
     }
 }
